# mempalace

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.antigravity-plugin/: README.md  hooks.json.tmpl  plugin.json
.antigravity-plugin/rules/: mempalace-recall.md
.antigravity-plugin/skills/mempalace/: SKILL.md
.antigravity-plugin/skills/mempalace-recall/: SKILL.md
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json  mempal-session-end-hook.sh
.claude-plugin/skills/mempalace-recall/: SKILL.md
.codex-plugin/: README.md  plugin.json
.cursor-plugin/: README.md  marketplace.json  plugin.json
.github/workflows/: ci.yml  deploy-docs.yml  docker-publish.yml  publish.yml  version-guard.yml
commands/: mempalace-help.md  mempalace-init.md  mempalace-mine.md  mempalace-search.md  mempalace-status.md
deploy/: docker-compose.server.yml  mempalace-server.service  server.env.example
docs/: RELEASING.md  authored-at.md  write-routing-policy.md
docs/recovery/: wing-name-migration.md
examples/antigravity/: README.md  hooks.json
examples/cursor/: README.md  hooks.json  hooks.minimal.json
examples/cursor/rules/: README.md  mempalace-recall-always.mdc  mempalace-recall.mdc
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh  mempal_session_end_hook.sh
hooks/antigravity/: INVESTIGATION.md  README.md  STDIN_SHAPE.md  install.sh  mempal_save_hook_antigravity.sh  mempal_wake_hook_antigravity.sh
hooks/antigravity/lib/: common.sh
hooks/cursor/: README.md  STDIN_SHAPE.md  install.sh  mempal_precompact_hook_cursor.sh  mempal_save_hook_cursor.sh  mempal_wake_hook_cursor.sh
hooks/cursor/lib/: common.sh
integrations/openclaw/: SKILL.md
integrations/shared/: recall-protocol.md
mempalace/: README.md  backups.py  cli.py  closet_llm.py  collision_scan.py  config.py  convo_miner.py  daemon.py  dedup.py  embedding.py  entities.py  entity_detector.py  format_miner.py  hallways.py  hook_shell.py  hooks_cli.py  ids.py  knowledge_graph.py  layers.py  llm_client.py  mcp_server.py  migrate.py  miner.py  normalize.py  palace.py  palace_graph.py  project_scanner.py  repair.py  searcher.py  service.py  version.py  wal.py  write_routing.py
mempalace/backends/: __init__.py  _sidecar.py  base.py  chroma.py  embedding_wrapper.py  milvus.py  pgvector.py  qdrant.py  registry.py  sqlite_exact.py
mempalace/data/: known_systems.json
mempalace/instructions/: help.md
rules/: mempalace-recall.mdc
scripts/: backfill_authored_at.py
skills/mempalace/: SKILL.md
skills/mempalace-recall/: SKILL.md
tests/: _backend_conformance.py  _chroma_palace_helper.py  conftest.py  test_antigravity_hooks_install.py  test_antigravity_hooks_shell.py  test_antigravity_plugin_manifest.py  test_backend_conformance.py  test_backends.py  test_backfill_authored_at.py  test_backups.py  test_claude_plugin_hook_config.py  test_clean_lone_surrogates.py  test_clean_nul_bytes.py  test_cli.py  test_cli_hallways.py  test_closets.py  test_collision_scan.py  test_config.py  test_config_palace_path.py  test_convo_miner.py  test_convo_miner_unit.py  test_cursor_hooks_install.py  test_cursor_hooks_shell.py  test_cursor_plugin_manifest.py  test_daemon.py  test_dedup.py  test_distance_metric.py  test_embedder_identity.py  test_embedding.py  test_embedding_wrapper.py  test_embeddinggemma.py  test_entities.py  test_entity_detector.py  test_fact_checker.py  test_format_miner.py  test_hallways.py  test_hallways_pagination.py  test_hallways_palace_scoped.py  test_hnsw_capacity.py  test_hnsw_payload_health.py  (+37 more)
website/.vitepress/: config.mts
website/.vitepress/theme/: style.css
website/guide/: antigravity.md  claude-code.md  configuration.md  cursor-hooks.md  mcp-integration.md  openclaw.md  remote-server.md
website/reference/: cli.md  mcp-tools.md  modules.md
